--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,20 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#aeafb1",
-        "activityBar.activeBorder": "#bf406a",
-        "activityBar.background": "#aeafb1",
+        "activityBar.activeBackground": "#2aaef1",
+        "activityBar.activeBorder": "#d10e90",
+        "activityBar.background": "#2aaef1",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#bf406a",
+        "activityBarBadge.background": "#d10e90",
         "activityBarBadge.foreground": "#e7e7e7",
-        "statusBar.background": "#949698",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#7a7c7f",
-        "titleBar.activeBackground": "#949698",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#94969899",
-        "titleBar.inactiveForeground": "#15202b99"
+        "statusBar.background": "#0e95da",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#2aaef1",
+        "titleBar.activeBackground": "#0e95da",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#0e95da99",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#949698",
+    "peacock.color": "#0E95DA",
     "python.pythonPath": "C:\\Users\\alws3\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
