--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,20 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#2aaef1",
-        "activityBar.activeBorder": "#d10e90",
-        "activityBar.background": "#2aaef1",
+        "activityBar.activeBackground": "#f3a668",
+        "activityBar.activeBorder": "#09763a",
+        "activityBar.background": "#f3a668",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#d10e90",
+        "activityBarBadge.background": "#09763a",
         "activityBarBadge.foreground": "#e7e7e7",
-        "statusBar.background": "#0e95da",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#2aaef1",
-        "titleBar.activeBackground": "#0e95da",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#0e95da99",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "statusBar.background": "#ef8a39",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#e36f12",
+        "titleBar.activeBackground": "#ef8a39",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#ef8a3999",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#0E95DA",
+    "peacock.color": "#EF8A39",
     "python.pythonPath": "C:\\Users\\alws3\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
